--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,1 +1,209 @@
-/*# sourceMappingURL=styles.css.map */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #9CCC65;
+}
+
+body {
+  background: white;
+}
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #333;
+  }
+}
+body section {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+body h2 {
+  margin-bottom: 1rem;
+}
+body header {
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+body header a {
+  text-decoration: none;
+  color: black;
+  height: 80%;
+  display: inline-block;
+  filter: brightness(0);
+}
+@media (prefers-color-scheme: dark) {
+  body header a {
+    color: white;
+    filter: brightness(1);
+  }
+}
+body header a img {
+  height: 100%;
+}
+body header figure {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 2rem;
+}
+body header figure a {
+  font-size: 1.2rem;
+  text-decoration: none;
+  font-weight: bold;
+}
+body .slider--section {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+body .slider--section figure {
+  display: flex;
+  flex-direction: row;
+  gap: 0.2rem;
+  width: 100%;
+  overflow-x: scroll;
+}
+body .slider--section figure img {
+  width: 33%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 748px) {
+  body .slider--section figure img {
+    width: 50%;
+  }
+}
+@media (max-width: 528px) {
+  body .slider--section figure img {
+    width: 100%;
+  }
+}
+body .cta--section {
+  height: 100vh;
+  background-image: url("../src/SDGGame.webp");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5%;
+}
+body .cta--section h2 {
+  font-size: 3rem;
+  color: white;
+}
+@media (max-width: 528px) {
+  body .cta--section h2 {
+    font-size: 1.5rem;
+  }
+}
+body .cta--section a {
+  text-decoration: none;
+  cursor: pointer;
+  background: #9CCC65;
+  color: white;
+  font-size: 2rem;
+  border-radius: 0.2rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border: 3px solid white;
+  transition: all 0.3s;
+}
+body .cta--section a:hover {
+  transform: translateY(-0.5rem);
+  box-shadow: 0px 0px 10px white;
+}
+body .sdgs--section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body .sdgs--section h2 {
+  width: 95%;
+}
+body .sdgs--section figure {
+  display: grid;
+  width: 95%;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+@media (max-width: 748px) {
+  body .sdgs--section figure {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 528px) {
+  body .sdgs--section figure {
+    grid-template-columns: 1fr;
+  }
+}
+body .sdgs--section figure div h3 {
+  color: black;
+  gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  overflow: hidden;
+}
+@media (prefers-color-scheme: dark) {
+  body .sdgs--section figure div h3 {
+    color: white;
+  }
+}
+body .sdgs--section figure div div {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+body .sdgs--section figure div div img {
+  transition: all 0.3s;
+  width: 100%;
+}
+body .sdgs--section figure div div img:hover {
+  width: 110%;
+}
+body footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  width: 100%;
+  padding: 1.5rem;
+  background: rgba(0, 0, 0, 0.062745098);
+}
+body footer figure {
+  display: flex;
+  flex-direction: column;
+}
+body footer figure a {
+  text-decoration: none;
+  color: black;
+}
+@media (prefers-color-scheme: dark) {
+  body footer figure a {
+    color: white;
+  }
+}
+body footer figure a:hover {
+  text-decoration: underline;
+}/*# sourceMappingURL=styles.css.map */
