--- a/web/css/styles.sass
+++ b/web/css/styles.sass
@@ -1,1 +1,173 @@
+*
+    padding: 0
+    margin: 0
+    box-sizing: border-box
 
+html
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    color: #9CCC65
+
+body
+    background: white
+
+    @media (prefers-color-scheme: dark)
+        background: #333
+
+    section
+        margin-top: 2rem
+        margin-bottom: 2rem
+
+    h2
+        margin-bottom: 1rem
+
+    header
+        width: 100%
+        height: 10vh
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
+        padding-left: 1.5rem
+        padding-right: 1.5rem
+
+        a
+            text-decoration: none
+            color: black
+            height: 80%
+            display: inline-block
+            filter: brightness(0)
+            @media (prefers-color-scheme: dark)
+                color: white
+                filter: brightness(1)
+
+            img
+                height: 100%
+
+        figure
+            display: flex
+            flex-direction: row
+            justify-content: space-between
+            gap: 2rem
+
+            a
+                font-size: 1.2rem
+                text-decoration: none
+                font-weight: bold
+    .slider--section
+        padding-left: 1.5rem
+        padding-right: 1.5rem
+        display: flex
+        flex-direction: column
+        figure
+            display: flex
+            flex-direction: row
+            gap: 0.2rem
+            width: 100%
+            overflow-x: scroll
+            img
+                width: 33%
+                object-fit: contain
+                @media (max-width: 748px)
+                    width: 50%
+                @media (max-width: 528px)
+                    width: 100%
+
+    .cta--section
+        height: 100vh
+        background-image: url("../src/SDGGame.webp")
+        background-size: cover
+        background-position: center center
+        background-repeat: no-repeat
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        align-items: center
+        padding: 5%
+        h2
+            font-size: 3rem
+            color: white
+            @media (max-width: 528px)
+                font-size: 1.5rem
+        a
+            text-decoration: none
+            cursor: pointer
+            background: #9CCC65
+            color: white
+            font-size: 2rem
+            border-radius: 0.2rem
+            padding-left: 4rem
+            padding-right: 4rem
+            padding-top: 0.5rem
+            padding-bottom: 0.5rem
+            border: 3px solid white
+            transition: all 0.3s
+            &:hover
+                transform: translateY(-0.5rem)
+                box-shadow: 0px 0px 10px white
+    .sdgs--section
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+
+        h2
+            width: 95%
+
+        figure
+            display: grid
+            width: 95%
+            gap: 1rem
+            grid-template-columns: 1fr 1fr 1fr 1fr
+
+            @media (max-width: 748px)
+                grid-template-columns: 1fr 1fr
+
+            @media (max-width: 528px)
+                grid-template-columns: 1fr
+
+            div
+                h3
+                    color: black
+                    gap: 0.5rem
+                    display: flex
+                    flex-direction: column
+                    align-items: left
+                    justify-content: center
+                    overflow: hidden
+                    @media (prefers-color-scheme: dark)
+                        color: white
+                div
+                    width: 100%
+                    height: 80%
+
+                    display: flex
+                    flex-direction: row
+                    justify-content: center
+                    align-items: center
+                    overflow: hidden
+                    img
+
+                        transition: all 0.3s
+                        width: 100%
+
+                        &:hover
+                            width: 110%
+    footer
+        display: flex
+        flex-direction: row
+        justify-content: right
+        width: 100%
+        padding: 1.5rem
+
+        background: #00000010
+        figure
+            display: flex
+            flex-direction: column
+
+            a
+                text-decoration: none
+                color: black
+                @media (prefers-color-scheme: dark)
+                    color: white
+                &:hover
+                    text-decoration: underline
