--- a/web/css/styles.sass
+++ b/web/css/styles.sass
@@ -1,1 +1,93 @@
+*
+    padding:0
+    margin: 0
+    box-sizing: border-box
 
+
+body
+    height: 100%
+
+header
+        height: 10vh
+        display: flex
+        flex-direction: row
+        justify-content: space-between
+        align-items: center
+        padding-left: 1.5rem
+        padding-right: 1.5rem
+
+        a
+            display: inline-block
+            height: 100%
+            img
+                height: 100%
+
+        figure
+            display: flex
+            flex-direction: row
+            justify-content: space-between
+            gap: 2rem
+
+            a
+                font-size: 1.2rem
+                text-decoration: none
+                font-weight: bold
+
+    
+a
+    text-decoration: none
+
+
+
+.Front 
+
+    display: flex
+    justify-content: center
+    align-items: center
+    font-size: 5rem
+    font-family: sans-serif
+
+.contact
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: row
+    gap: 3rem
+    margin-top: 3rem
+
+p
+    color: black
+    
+
+.heading
+    font-size: 1.1rem 
+    width: 55ch
+    position: absolute
+    right: 35%
+    top: 40%
+
+footer
+        display: flex
+        flex-direction: row
+        justify-content: right
+        width: 100%
+        padding: 1.5rem
+        position: absolute
+        bottom: 0
+        color: black
+        background: #00000010
+        figure
+            display: flex
+            flex-direction: column
+
+            a
+                text-decoration: none
+                color: black
+                @media (prefers-color-scheme: dark)
+                    color: black
+                &:hover
+                    text-decoration: underline
+
+
+        
+    
