--- a/web/css/styles.sass
+++ b/web/css/styles.sass
@@ -54,6 +54,7 @@ a
     flex-direction: row
     gap: 3rem
     margin-top: 3rem
+    font-size: 1.3rem
 
 p
     color: black
@@ -65,6 +66,7 @@ p
     position: absolute
     right: 35%
     top: 40%
+
 
 footer
         display: flex
