--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -54,7 +54,8 @@ a {
   align-items: center;
   flex-direction: row;
   gap: 3rem;
-  margin-top: 3rem;
+  margin-top:11rem;
+  font-size: 1.5rem;
 }
 
 p {
