--- a/web/css/styles.sass
+++ b/web/css/styles.sass
@@ -130,6 +130,11 @@ body
                 grid-template-columns: 1fr
 
             div
+                overflow: hidden
+                display: flex
+                flex-direction: column
+                justify-content: space-between
+                gap: 0.5rem
                 h3
                     color: black
                     gap: 0.5rem
@@ -142,8 +147,7 @@ body
                         color: white
                 div
                     width: 100%
-                    height: 80%
-
+                    height: 15rem
                     display: flex
                     flex-direction: row
                     justify-content: center
@@ -152,10 +156,9 @@ body
                     img
 
                         transition: all 0.3s
-                        width: 100%
-
+                        height: 100%
                         &:hover
-                            width: 110%
+                            height: 110%
 
     .Front
         display: flex
