--- a/web/css/styles.sass
+++ b/web/css/styles.sass
@@ -6,6 +6,7 @@
 html
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     color: #9CCC65
+    letter-spacing: 0.04rem
 
 body
     min-height: 100vh
@@ -81,11 +82,14 @@ body
                     background-image: url("../src/NL_Flag.webp")
                 #english--b
                     background-image: url("../src/EN_Flag.webp")
-    .slider--section
-        padding-left: 1.5rem
-        padding-right: 1.5rem
-        display: flex
-        flex-direction: column
+    .index--page
+        min-height: 80vh
+
+        .slider--section
+            padding-left: 1.5rem
+            padding-right: 1.5rem
+            display: flex
+            flex-direction: column
         figure
             display: flex
             flex-direction: row
@@ -99,90 +103,93 @@ body
                     width: 50%
                 @media (max-width: 528px)
                     width: 100%
-    .cta--section
-        height: 100vh
-        background-image: url("../src/SDGGame.webp")
-        background-size: cover
-        background-position: center center
-        background-repeat: no-repeat
-        display: flex
-        flex-direction: column
-        justify-content: space-between
-        align-items: center
-        padding: 5%
-        h2
-            font-size: 3rem
-            color: white
-            @media (max-width: 528px)
-                font-size: 1.5rem
-        a
-            text-decoration: none
-            cursor: pointer
-            background: #9CCC65
-            color: white
-            font-size: 2rem
-            border-radius: 0.2rem
-            padding-left: 4rem
-            padding-right: 4rem
-            padding-top: 0.5rem
-            padding-bottom: 0.5rem
-            border: 3px solid white
-            transition: all 0.3s
-            &:hover
-                transform: translateY(-0.5rem)
-                box-shadow: 0px 0px 10px white
-    .sdgs--section
-        display: flex
-        flex-direction: column
-        justify-content: center
-        align-items: center
-        margin-bottom: 20vh
+        .cta--section
+            height: 100vh
+            background-image: url("../src/SDGGame.webp")
+            background-size: cover
+            background-position: center center
+            background-repeat: no-repeat
+            display: flex
+            flex-direction: column
+            justify-content: space-between
+            align-items: center
+            padding: 5%
+            h2
+                font-size: 3rem
+                color: white
+                @media (max-width: 528px)
+                    font-size: 1.5rem
+            a
+                text-decoration: none
+                cursor: pointer
+                background: #9CCC65
+                color: white
+                font-size: 2rem
+                border-radius: 0.2rem
+                padding-left: 4rem
+                padding-right: 4rem
+                padding-top: 0.5rem
+                padding-bottom: 0.5rem
+                border: 3px solid white
+                transition: all 0.3s
+                &:hover
+                    transform: translateY(-0.5rem)
+                    box-shadow: 0px 0px 10px white
+        .sdgs--section
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            margin-bottom: 20vh
 
-        h2
-            width: 95%
+            h2
+                width: 95%
 
-        figure
-            display: grid
-            width: 95%
-            gap: 1rem
-            grid-template-columns: 1fr 1fr 1fr 1fr
+            figure
+                display: grid
+                width: 95%
+                gap: 1rem
+                grid-template-columns: 1fr 1fr 1fr 1fr
+                overflow-x: hidden
 
-            @media (max-width: 748px)
-                grid-template-columns: 1fr 1fr
+                @media (max-width: 748px)
+                    grid-template-columns: 1fr 1fr
 
-            @media (max-width: 528px)
-                grid-template-columns: 1fr
+                @media (max-width: 528px)
+                    grid-template-columns: 1fr
 
-            div
-                overflow: hidden
-                display: flex
-                flex-direction: column
-                justify-content: space-between
-                gap: 0.5rem
-                h3
-                    color: black
-                    gap: 0.5rem
+                div
+                    overflow: hidden
                     display: flex
                     flex-direction: column
-                    align-items: left
-                    justify-content: center
-                    overflow: hidden
-                    @media (prefers-color-scheme: dark)
-                        color: white
-                div
-                    width: 100%
-                    height: 15rem
-                    display: flex
-                    flex-direction: row
-                    justify-content: center
-                    align-items: center
-                    overflow: hidden
-                    img
+                    justify-content: space-between
+                    gap: 0.5rem
+                    h3
+                        color: black
+                        gap: 0.5rem
+                        display: flex
+                        flex-direction: column
+                        align-items: left
+                        justify-content: center
+                        overflow: hidden
+                        @media (prefers-color-scheme: dark)
+                            color: white
+                    div
+                        width: 100%
+                        height: 15rem
+                        display: flex
+                        flex-direction: row
+                        justify-content: center
+                        align-items: center
+                        overflow: hidden
 
-                        transition: all 0.3s
-                        height: 100%
-                        &:hover
-                            height: 110%
+                        img
+                            min-width: 100%
+                            transition: all 0.3s
+                            height: 100%
+
+                            &:hover
+                                transform: scale(1.05)
 
     .contact--page
         min-height: 80vh
@@ -230,6 +237,74 @@ body
                         color: white
                     &:hover
                         text-decoration: underline
+
+    .sdg--page
+        display: flex
+        flex-direction: column
+        align-items: center
+        min-height: 105vh
+        @media (max-width: 1048px)
+            min-height: 150vh
+        @media (max-width: 428px)
+            min-height: 180vh
+        section
+            margin-bottom: 5rem
+            display: flex
+            justify-content: center
+            gap: 10%
+            @media (max-width: 1048px)
+                flex-direction: column
+                justify-content: start
+                align-items: center
+                gap: 5rem
+
+            figure
+                display: flex
+                flex-direction: column
+                align-items: center
+                width: 45%
+                gap: 1rem
+                @media (max-width: 1048px)
+                    width: 80%
+                    align-items: flex-start
+                h1
+                    font-size: 2rem
+                img
+
+                    width: 75%
+                    object-fit: contain
+                    @media (max-width: 528px)
+                        width: 100%
+
+            article
+                width: 35%
+                @media (max-width: 1048px)
+                    width: 80%
+                p
+                    font-size: 1.5rem
+                    color: black
+                    @media (prefers-color-scheme: dark)
+                        color: white
+                h2
+                    font-size: 2rem
+
+        a
+            text-decoration: none
+            cursor: pointer
+            background: #9CCC65
+            color: white
+            font-size: 1.5rem
+            border-radius: 0.2rem
+            padding: 1rem
+            border: 3px solid white
+            transition: all 0.3s
+            @media (max-width: 528px)
+                font-size: 1rem
+                padding: 2rem
+                font-weight: bold
+            &:hover
+                transform: translateY(-0.5rem)
+                box-shadow: 0px 0px 10px white
 
     footer
         display: flex
