--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -114,6 +114,18 @@ body .index--page .slider--section {
   display: flex;
   flex-direction: column;
 }
+body .index--page .slider--section a {
+  aspect-ratio: 16/9;
+  min-height: 25vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .index--page .slider--section a img {
+  width: 50%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 body .index--page figure {
   display: flex;
   flex-direction: row;
@@ -202,14 +214,14 @@ body .index--page .sdgs--section figure {
     grid-template-columns: 1fr;
   }
 }
-body .index--page .sdgs--section figure div {
+body .index--page .sdgs--section figure a {
   overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 0.5rem;
 }
-body .index--page .sdgs--section figure div h3 {
+body .index--page .sdgs--section figure a h3 {
   color: black;
   gap: 0.5rem;
   display: flex;
@@ -219,26 +231,27 @@ body .index--page .sdgs--section figure div h3 {
   overflow: hidden;
 }
 @media (prefers-color-scheme: dark) {
-  body .index--page .sdgs--section figure div h3 {
+  body .index--page .sdgs--section figure a h3 {
     color: white;
   }
 }
-body .index--page .sdgs--section figure div div {
+body .index--page .sdgs--section figure a div {
   width: 100%;
   background: red;
   height: 15rem;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   overflow: hidden;
 }
-body .index--page .sdgs--section figure div div img {
-  width: 100%;
-  transition: all 0.3s;
-}
-body .index--page .sdgs--section figure div div img:hover {
+body .index--page .sdgs--section figure a div:hover img {
   scale: 1.05;
+}
+body .index--page .sdgs--section figure a div img {
+  width: 50%;
+  max-height: 100%;
+  transition: all 0.3s;
 }
 body .contact--page {
   min-height: 80vh;
@@ -306,7 +319,7 @@ body .sdg--page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 105vh;
+  min-height: 135vh;
 }
 @media (max-width: 1048px) {
   body .sdg--page {
@@ -348,15 +361,25 @@ body .sdg--page section figure {
 body .sdg--page section figure h1 {
   font-size: 2rem;
 }
-body .sdg--page section figure img {
-  width: 75%;
+body .sdg--page section figure div {
+  height: 40vh;
+  aspect-ratio: 16/9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+@media (max-width: 748px) {
+  body .sdg--page section figure div {
+    width: 100%;
+    height: auto;
+  }
+}
+body .sdg--page section figure div img {
   -o-object-fit: contain;
      object-fit: contain;
-}
-@media (max-width: 528px) {
-  body .sdg--page section figure img {
-    width: 100%;
-  }
+  width: 50%;
+  max-height: 100%;
 }
 body .sdg--page section article {
   width: 35%;
