--- a/public/css/styles.sass
+++ b/public/css/styles.sass
@@ -93,6 +93,15 @@ body
             padding-right: 1.5rem
             display: flex
             flex-direction: column
+            a
+                aspect-ratio: 16/9
+                min-height: 25vh
+                display: flex
+                justify-content: center
+                align-items: center
+                img
+                    width: 50%
+                    object-fit: contain
         figure
             display: flex
             flex-direction: row
@@ -161,7 +170,7 @@ body
                 @media (max-width: 528px)
                     grid-template-columns: 1fr
 
-                div
+                a
                     overflow: hidden
                     display: flex
                     flex-direction: column
@@ -183,15 +192,17 @@ body
                         height: 15rem
                         display: flex
                         flex-direction: row
-                        justify-content: flex-start
+                        justify-content: center
                         align-items: center
                         overflow: hidden
+                        &:hover
+                            img
+                                scale: 1.05
 
                         img
-                            width: 100%
+                            width: 50%
+                            max-height: 100%
                             transition: all 0.3s
-                            &:hover
-                                scale: 1.05
 
     .contact--page
         min-height: 80vh
@@ -244,7 +255,7 @@ body
         display: flex
         flex-direction: column
         align-items: center
-        min-height: 105vh
+        min-height: 135vh
         @media (max-width: 1048px)
             min-height: 150vh
         @media (max-width: 428px)
@@ -271,12 +282,21 @@ body
                     align-items: flex-start
                 h1
                     font-size: 2rem
-                img
-
-                    width: 75%
-                    object-fit: contain
-                    @media (max-width: 528px)
+                div
+                    height: 40vh
+                    aspect-ratio: 16/9
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    overflow: hidden
+                    @media (max-width: 748px)
                         width: 100%
+                        height: auto
+
+                    img
+                        object-fit: contain
+                        width: 50%
+                        max-height: 100%
 
             article
                 width: 35%
